--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-vyatta-op (20070917) unstable; urgency=low
+vyatta-op (0.1) unstable; urgency=low
 
   * Initial Release.
 
- -- Tom Grennan <tgrennan@vyatta.com>  Mon, 17 Sep 2007 11:05:15 -0700
+ -- Tom Grennan <tgrennan@vyatta.com>  Mon, 17 Sep 2007 15:29:15 -0700
