--- a/README
+++ b/README
@@ -31,17 +31,18 @@ function, $1 is the command name rather than the usual $0. So, the
 command "show interfaces ethernet eth0" would evaluate the respective
 run command with $4 == eth0.
 
-The variable argument .../node.tag/node.def files must also define an
-"allowed" value field that is a shell expression that outputs (stdout)
-the list of values;
-like .../templates/show/interfaces/ethernet/node.tag/node.def:
+The variable argument .../node.tag/node.def files may also define an
+"allowed" field. This is a misnomer since it's really used to produce
+a list of possible completions rather than what is allowed during
+execution. The fields contents are evaluated shell expression that
+outputs (stdout) the list of possible completion values; like
+.../templates/show/interfaces/ethernet/node.tag/node.def:
 
 help: "Show given ethernet interface information"
 allowed: local -a array=( /sys/class/net/{eth,vmnet}* ) ;
 	 echo  -n ${array[@]##*/}
 run: ${vyatta_bindir}/vyatta-show-interfaces ethernet $4
 
-You may use the "--" wild card, for variable arguments with no
-possible completion:
-
-allowed: echo -n --
+A blank or missing "allowed" field means that there is no completion
+for the respective node; for such nodes a '*' placeholder tag is
+displayed with the help text.
