--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+vyatta-op (0.4) unstable; urgency=low
+
+  3.0.2
+  [ Mark O'Brien ]
+
+  * 3.0.1
+
+  [ rbalocca ]
+  * Fix debian dependencies
+  * Line up the colons with the copyright notice (in show version)
+  * Set dependencies on either bash or vyatta-bash
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@vyatta.com>  Fri, 04 Apr 2008 18:01:12 -0700
+
 vyatta-op (0.3) unstable; urgency=low
 
   VC4.0.1
