--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,36 @@
+vyatta-op (0.12) unstable; urgency=low
+
+	  3.1.2
+  [ Mark O'Brien ]
+
+
+  [ Mohit Mehta ]
+  * better detection of whether domain-name set using CLI is overriding
+  * => display text saying the domain-name received from dhcp-server
+
+  [ An-Cheng Huang ]
+  * fix for bug 3451: add messages output
+
+  [ Stephen Hemminger ]
+  * Turn on paging of tail when showing count lines
+  * Show files completion
+
+  [ Mohit Mehta ]
+  * prevents showing backend error to user on traceroute when name-
+    server not set
+  * Fix Bug 2871 Internal errors reported with traceroute
+
+  [ An-Cheng Huang ]
+  * fix for bug 3414: make op mode functions available in config mode.
+
+  [ Mohit Mehta ]
+  * Fix Bug 1059 Feature Request: integrate 'tcpdump' and 'tethereal'
+    into Vyatta CLI
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@firebolt.vyatta.com>  Wed, 23 Jul 2008 21:36:10 -0700
+
 vyatta-op (0.11) unstable; urgency=low
 
 	  3.1.1
