--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,124 @@
+vyatta-op (0.13) unstable; urgency=low
+
+	  3.2.0
+  [ Mark O'Brien ]
+
+
+  [ Mohit Mehta ]
+  * add 'ppp interface-name' to output of 'show dns forwarding
+    nameserver'
+  * add wirelessmodem to interface hash to pick up description from CLI
+
+  [ Stephen Hemminger ]
+  * Sort interfaces in bonding operational mode commands
+  * Show correct statistics on slaves
+
+  [ Stig Thormodsrud ]
+  * Rename "show arp6" to "show ipv6 neighbors".
+
+  [ Stephen Hemminger ]
+  * need sudo before ethtool -S
+  * Save/restore command history in configure
+
+  [ Bob Gilligan ]
+  * Bugfix: 3841:  Allow admin level users to run the RAID op mode
+    commands.
+
+  [ Stephen Hemminger ]
+  * fix 'show history N'
+  * Fix references to ethtool
+  * Better format of output
+  * Show command history
+
+  [ Robert Bays ]
+  * move show system usb to vyatta-op
+
+  [ Bob Gilligan ]
+  * Bugfix: 3744
+
+  [ Stephen Hemminger ]
+  * Revert insecure method of displaying configuration
+
+  [ Mohit Mehta ]
+  * Fix Bug 3763 Configuration is not available to operator in "show
+    tech-support"
+  * make sure file has been written to before extracting
+
+  [ Rick Balocca ]
+  * Recognize aufs
+
+  [ Mohit Mehta ]
+  * Fix Bug 3609 "show tech-support" does not display open file
+    information for operator level user
+
+  [ Stig Thormodsrud ]
+  * Fix 2881: "show tech-support" should limit the output of "show ip
+    route"
+
+  [ Bob Gilligan ]
+  * Bugfix: 3333
+  * Bugfix: 1725
+
+  [ Mohit Mehta ]
+  * Fix Bug 3716 - Dynamic DNS status may incorrectly indicate lack of
+    configuration
+
+  [ Stig Thormodsrud ]
+  * Revert "Fix less prompt."
+  * Fix less prompt.
+
+  [ Stephen Hemminger ]
+  * remove debug code
+  * Fix script for bond with no slaves
+  * Show all interfaces
+  * Add preliminary operational mode support for bonding
+  * Add operational mode template for ethtool statistics
+
+  [ Mohit Mehta ]
+  * change op-mode command 'clear dns forwarding statistics' to 'clear
+    dns forwarding all'
+  * add code for op-mode Dynamic DNS commands
+
+  [ Bob Gilligan ]
+  * Add operational mode commands for RAID.
+
+  [ Mohit Mehta ]
+  * change command 'clear dns forwarding process' to 'clear dns
+    forwarding statistics'
+  * allowed values for dhcp release/renew should show bridges as well if
+    configured to use dhcp
+  * add command 'clear dns forwarding process' to restart dnsmasq and
+    clear all statistics
+
+  [ Stig Thormodsrud ]
+  * Fix 3540: ssmtp complaining that it's unable to locate mail
+
+  [ Mohit Mehta ]
+  * better wording for output of 'show dns forwarding nameservers'
+
+  [ Stig Thormodsrud ]
+  * Fix "show interfaces ethernet" after "clear interfaces counters"
+
+  [ Mohit Mehta ]
+  * use active config directory base to get config values from op-mode
+  * code for op-mode command: 'show dns forwarding nameservers'
+  * dns-forwarding op-mode commands:
+  * add 'clear dns forwarding cache' command
+
+  [ Stig Thormodsrud ]
+  * Fix IPv6 help string.
+  * Add some ipv6 op mode commands.
+  * The at package pulls in citadel-mta, use small mta.
+  * Add missing "show reboot".
+  * Enable "reload at|cancel".
+
+  [ An-Cheng Huang ]
+  * add openvpn interfaces to "show interfaces"
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@firebolt.vyatta.com>  Tue, 25 Nov 2008 19:10:16 -0800
+
 vyatta-op (0.12) unstable; urgency=low
 
 	  3.1.2
