--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.3) unstable; urgency=low
+
+  * New show system cpu
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Thu, 29 Jan 2009 14:59:45 -0800
+
 vyatta-op (0.13.2) unstable; urgency=low
 
   [ Justin Fletcher ]
