--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+vyatta-op (0.13.6) unstable; urgency=low
+
+  * Change show log directory to use 'if'
+  * Show arp: don't resolve host names
+  * Add show arp eth0
+  * Use vyatta-interfaces --show to display allowed types
+  * Don't resolve hostnames in show tech-support
+  * Use lesspipe to unzip log files
+  * Add shutdown command to CLI
+
+ -- Stephen Hemminger <shemminger@debian>  Thu, 12 Feb 2009 14:58:54 -0800
+
 vyatta-op (0.13.5) unstable; urgency=low
 
   [ Mohit Mehta ]
