--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.8) unstable; urgency=low
+
+  * Fix problems with new show-interfaces.pl
+  * Invalid action should cause usage message
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Wed, 18 Feb 2009 10:19:16 -0800
+
 vyatta-op (0.13.7) unstable; urgency=low
 
   * Prompt before immediate shutdown
