--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Every template directory must have one and only one file named
 like .../templates/show/interfaces/node.def:
 
 help: "Show network interface information"
-run: ${vyatta_bindir}/vyatta-show-interfaces
+run: ${vyatta_bindir}/vyatta-show-interfaces.pl --show
 
 Notes:
 	- field tags (i.e. "help:" and "run:") must be at the start of line
@@ -45,18 +45,6 @@ Examples:
 
 .../templates/show/interfaces/ethernet/node.tag/node.def
 
-help: "Show given ethernet interface information"
-allowed: local -a array=( /sys/class/net/{eth,vmnet}* ) ;
-	 echo  -n ${array[@]##*/}
-run: ${vyatta_bindir}/vyatta-show-interfaces ethernet $4
-
-
-.../templates/terminal/length/node.tag/node.def
-
-help: Set terminal to given number of rows (0 disables paging)
-allowed: echo -n '<NUMBER>'
-run: if [ "$3" -eq 0 ] ; then
-	VYATTA_PAGER=cat
-     else
-	stty rows $3
-     fi
+help: Show specified ethernet interface information
+allowed: ${vyatta_sbindir}/vyatta-interfaces.pl --show ethernet
+run: ${vyatta_bindir}/vyatta-show-interfaces.pl --intf="$4"
