--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.13.13) unstable; urgency=low
+
+  * Fix typo in shutdown cancel
+  * Cleanup show disk format
+  * Cleanup show disk format
+  * Fix lsof options in tech-support
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Wed, 11 Mar 2009 17:58:58 -0700
+
 vyatta-op (0.13.12) unstable; urgency=low
 
   [ Stig Thormodsrud ]
