--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.16) unstable; urgency=low
+
+  * add local env hook
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Mon, 23 Mar 2009 16:56:44 -0700
+
 vyatta-op (0.13.15) unstable; urgency=low
 
   * Fix shutdown at to return to prompt
