--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.18+jenner1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Fri, 29 May 2009 18:32:37 -0700
+
 vyatta-op (0.13.18) unstable; urgency=low
 
   * Show more detail about interfaces in show tech-support
