--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.18+jenner2) unstable; urgency=low
+
+  * Add 'show interfaces pseudo-ethernet'
+  * Fix completion for vif
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Mon, 01 Jun 2009 09:33:35 -0700
+
 vyatta-op (0.13.18+jenner1) unstable; urgency=low
 
   * UNRELEASED
