--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.18+jenner7) unstable; urgency=low
+
+  * Fix handling of invalid bonding name
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Wed, 10 Jun 2009 10:21:30 -0700
+
 vyatta-op (0.13.18+jenner6) unstable; urgency=low
 
   * Add operator to show disk format
