--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-op (0.13.18+jenner9) unstable; urgency=low
+
+  * Fix error message from show bonding
+  * Cleanup show bonding script
+  * Make bonding operational mode consistent with ethernet
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 07 Jul 2009 11:07:28 -0700
+
 vyatta-op (0.13.18+jenner8) unstable; urgency=low
 
   * Change vyatta-op dependency from ssmtp to mail-transport-agent.
