--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.18+jenner10) unstable; urgency=low
+
+  * Remove pseudo-ethernet vif templates
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 07 Jul 2009 11:09:56 -0700
+
 vyatta-op (0.13.18+jenner9) unstable; urgency=low
 
   * Fix error message from show bonding
