--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.18+jenner11) unstable; urgency=low
+
+  * Add missing template for 'show interfaces bonding bondX'
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 07 Jul 2009 14:01:58 -0700
+
 vyatta-op (0.13.18+jenner10) unstable; urgency=low
 
   * Remove pseudo-ethernet vif templates
