--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.18+jenner12) unstable; urgency=low
+
+  * Remove bogus statistics template
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Thu, 16 Jul 2009 14:18:47 -0700
+
 vyatta-op (0.13.18+jenner11) unstable; urgency=low
 
   * Add missing template for 'show interfaces bonding bondX'
