--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.22) unstable; urgency=low
+
+  * Add show system login users
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Fri, 11 Sep 2009 23:19:12 -0700
+
 vyatta-op (0.13.21) unstable; urgency=low
 
   [ Stephen Hemminger ]
