--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.23) unstable; urgency=low
+
+  * Decolorize show system login users
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Mon, 14 Sep 2009 17:17:04 -0700
+
 vyatta-op (0.13.22) unstable; urgency=low
 
   * Add show system login users
