--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.26) unstable; urgency=low
+
+  * Prevent problems on upgrade for files moved from vyatta-serial to
+    this package
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Mon, 09 Nov 2009 16:06:49 -0800
+
 vyatta-op (0.13.25) unstable; urgency=low
 
   * move generic interface op commands to vyatta-op
