--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.28) unstable; urgency=low
+
+  * Use new cleaner command arguments
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Wed, 16 Dec 2009 12:06:35 -0800
+
 vyatta-op (0.13.27) unstable; urgency=low
 
   * add op command for image removal
