--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.29) unstable; urgency=low
+
+  * Add display of accounting information
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Fri, 18 Dec 2009 16:27:24 -0800
+
 vyatta-op (0.13.28) unstable; urgency=low
 
   * Use new cleaner command arguments
