--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.13.30) unstable; urgency=low
+
+  * Use perl to scan directory
+  * Get rid of dead code.
+  * Use perl to read resolv.conf
+  * Rearrange code for clarity
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 22 Dec 2009 14:46:28 -0800
+
 vyatta-op (0.13.29) unstable; urgency=low
 
   * Add display of accounting information
