--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.31) unstable; urgency=low
+
+  * Allow displaying and switching to disk-based installations.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Wed, 23 Dec 2009 10:55:49 -0800
+
 vyatta-op (0.13.30) unstable; urgency=low
 
   * Use perl to scan directory
