--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.37) unstable; urgency=low
+
+  * Allow deletion of disk-based non-image installation.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Tue, 05 Jan 2010 14:59:33 -0800
+
 vyatta-op (0.13.36) unstable; urgency=low
 
   * Don't allow operator to run show system login users
