--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.38) unstable; urgency=low
+
+  * Show interfaces no longer uses Vyatta::Config
+  * Simple SNMP operational command
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Wed, 06 Jan 2010 08:30:17 -0800
+
 vyatta-op (0.13.37) unstable; urgency=low
 
   * Allow deletion of disk-based non-image installation.
