--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.41) unstable; urgency=low
+
+  * Add image name completion for two system image commands.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Mon, 11 Jan 2010 17:07:51 -0800
+
 vyatta-op (0.13.40) unstable; urgency=low
 
   * Change operational mode commands to match those in design document.
