--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.42) unstable; urgency=low
+
+  * Add accounting per user
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Thu, 21 Jan 2010 13:47:01 -0800
+
 vyatta-op (0.13.41) unstable; urgency=low
 
   * Add image name completion for two system image commands.
