--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.43) unstable; urgency=low
+
+  * Remove system accounting
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Thu, 21 Jan 2010 18:17:12 -0800
+
 vyatta-op (0.13.42) unstable; urgency=low
 
   * Add accounting per user
