--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.46) unstable; urgency=low
+
+  * Expand all possible interfaces with leases for renew
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Thu, 28 Jan 2010 17:21:45 -0800
+
 vyatta-op (0.13.45) unstable; urgency=low
 
   * Bugfix 5238: Prevent the running image from being deleted
