--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.49+kenwood1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Wed, 17 Feb 2010 16:09:03 -0800
+
 vyatta-op (0.13.49) unstable; urgency=low
 
   * Fix bug 4115 'clear nat translations' does not clear nat
