--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.49+kenwood4) unstable; urgency=low
+
+  * Revert "Bugfix 5394: Move colon characters to their proper
+    locations."
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Fri, 05 Mar 2010 15:21:07 -0800
+
 vyatta-op (0.13.49+kenwood3) unstable; urgency=low
 
   * Bugfix 5394: Move colon characters to their proper locations.
