--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.53) unstable; urgency=low
+
+  * Change vyatta-vtysh to vtysh
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Mon, 08 Mar 2010 16:34:53 -0800
+
 vyatta-op (0.13.52) unstable; urgency=low
 
   * Bugfix 5394: Move colon characters to their proper locations.
