--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.57) unstable; urgency=low
+
+  * Remove old vtysh alias
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Fri, 19 Mar 2010 17:31:44 -0700
+
 vyatta-op (0.13.56) unstable; urgency=low
 
   * Add "reboot now" to prevent confirmation prompt.
