--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.58) unstable; urgency=low
+
+  * Use new interface_description function
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Mon, 29 Mar 2010 16:15:45 -0700
+
 vyatta-op (0.13.57) unstable; urgency=low
 
   * Remove old vtysh alias
