--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.62) unstable; urgency=low
+
+  * Add "show system image storage" op mode command.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Fri, 30 Apr 2010 17:50:24 -0700
+
 vyatta-op (0.13.61) unstable; urgency=low
 
   * Added an op-mode command to rename a system image.
