--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.63) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Fri, 30 Apr 2010 17:51:27 -0700
+
 vyatta-op (0.13.62) unstable; urgency=low
 
   * Add "show system image storage" op mode command.
