--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.68) unstable; urgency=low
+
+  * Allow admin user to run "show system image storage" command.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Sun, 30 May 2010 06:42:20 -0700
+
 vyatta-op (0.13.67) unstable; urgency=low
 
   * Show tech-support Larkspur enhancements.
