--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.67) unstable; urgency=low
+
+  * Show tech-support Larkspur enhancements.
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Fri, 04 Jun 2010 18:37:17 +0000
+
 vyatta-op (0.13.66) unstable; urgency=low
 
   * Add cli for vyatta-config-gen-sets.pl
