--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.71) unstable; urgency=low
+
+  * Changes to read policy and vrrp configuration for show tech-support.
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Wed, 16 Jun 2010 23:41:21 +0000
+
 vyatta-op (0.13.70) unstable; urgency=low
 
   * Fix 5497: display entire interface description in the operational
