--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.74) unstable; urgency=low
+
+  * Added 'show system image' commands to 'show tech-support'.
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Tue, 06 Jul 2010 23:27:11 +0000
+
 vyatta-op (0.13.73) unstable; urgency=low
 
   * Changed to save 100 log files instead of 10.
