--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.77) unstable; urgency=low
+
+  * hide conntrack messages
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 09 Jul 2010 13:35:04 -0700
+
 vyatta-op (0.13.76) unstable; urgency=low
 
   * Display supplemental groups
