--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.81) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 22 Jul 2010 17:25:38 -0700
+
 vyatta-op (0.13.80) unstable; urgency=low
 
   * part of fix for BZ 5839 - move clear process cmds under restart
