--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.80+larkspur2) unstable; urgency=low
+
+  * Adding 'generate tech-support archive'command
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Fri, 23 Jul 2010 18:28:54 +0000
+
 vyatta-op (0.13.80+larkspur1) unstable; urgency=low
 
   * UNRELEASED
