--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.82) unstable; urgency=low
+
+  * new API changes
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Fri, 30 Jul 2010 16:42:57 -0700
+
 vyatta-op (0.13.81) unstable; urgency=low
 
   * UNRELEASED
