--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.86) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 02 Sep 2010 18:29:45 -0700
+
 vyatta-op (0.13.85) unstable; urgency=low
 
   * switch "show configuration" to use new config output implementation.
