--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.100) unstable; urgency=low
+
+  * provide default filename completion
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Tue, 21 Dec 2010 11:28:22 -0800
+
 vyatta-op (0.13.99) unstable; urgency=low
 
   * Add show system memory detail
