--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.102) unstable; urgency=low
+
+  * fix for bug 6476.
+
+ -- Michael Larson <mike@vyatta.com>  Mon, 17 Jan 2011 16:27:41 -0800
+
 vyatta-op (0.13.101) unstable; urgency=low
 
   * new branch
