--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.100+mendocino2) unstable; urgency=low
+
+  * don't use conffiles (not the vyatta way)
+  * correctly handle renamed file
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 20 Jan 2011 18:24:03 -0800
+
 vyatta-op (0.13.100+mendocino1) unstable; urgency=low
 
   * new branch
